新加了Annotation Processor 处理需要管理的资源和操作

--- a/hornet-processor-test/pom.xml
+++ b/hornet-processor-test/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>hornet-processor</artifactId>
+    <artifactId>hornet-processor-test</artifactId>
 
 
     <dependencies>
@@ -19,29 +19,12 @@
         </dependency>
         <dependency>
             <groupId>com.hornetmall</groupId>
-            <artifactId>hornet-common</artifactId>
+            <artifactId>hornet-processor</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.google.auto.service</groupId>
-            <artifactId>auto-service</artifactId>
-            <scope>provided</scope>
-            <optional>true</optional>
-        </dependency>
-
-        <dependency>
-            <groupId>jakarta.persistence</groupId>
-            <artifactId>jakarta.persistence-api</artifactId>
-        </dependency>
-
-
     </dependencies>
 
 
