--- a/hornet-annotation/pom.xml
+++ b/hornet-annotation/pom.xml
@@ -5,15 +5,11 @@
     <parent>
         <artifactId>hornet-framework</artifactId>
         <groupId>com.hornetmall</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>${revision}${changelist}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>hornet-annotation</artifactId>
 
-    <properties>
-        <maven.compiler.source>14</maven.compiler.source>
-        <maven.compiler.target>14</maven.compiler.target>
-    </properties>
 
 </project>
