--- a/hornet-spring-boot-starter/pom.xml
+++ b/hornet-spring-boot-starter/pom.xml
@@ -5,15 +5,22 @@
     <parent>
         <artifactId>hornet-framework</artifactId>
         <groupId>com.hornetmall</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>${revision}${changelist}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>hornet-spring-boot-starter</artifactId>
 
-    <properties>
-        <maven.compiler.source>14</maven.compiler.source>
-        <maven.compiler.target>14</maven.compiler.target>
-    </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.hornetmall</groupId>
+            <artifactId>hornet-common</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
